FIX: colors check

--- a/assets/scss/_account.scss
+++ b/assets/scss/_account.scss
@@ -149,7 +149,7 @@
         transition: all 0.1s ease-in-out;
 
         &:focus {
-            background: #fff;;
+            background: #f5f6fa;;
         }
     }
 
@@ -245,7 +245,7 @@
         transition: all 0.1s ease-in-out;
 
         &:focus {
-            background: #fff;
+            background: #f5f6fa;
         }
     }
 
