--- a/assets/scss/_account.scss
+++ b/assets/scss/_account.scss
@@ -17,6 +17,10 @@
         @media (max-width: 768px) {
             width: 100%;
         }
+
+        &>p {
+            text-align: center;
+        }
     }
 
     nav {
@@ -33,8 +37,6 @@
             width: 100%;
 
             @media (max-width: 768px) {
-                overflow-x: auto;
-                justify-content: flex-start;
                 padding: 1rem 0.5rem;
                 align-items: center;
             }
@@ -43,11 +45,15 @@
                 padding: 0 2rem;
 
                 @media (max-width: 768px) {
-                    padding: 0 2.5rem 0 0;
+                    /*padding: 0 2.5rem 0 0;
                     text-align: center;
 
                     &:last-child {
                         padding: 0;
+                    }*/ 
+
+                    &:not(.is-active) {
+                        display: none;
                     }
                 }
 
@@ -149,7 +155,8 @@
         transition: all 0.1s ease-in-out;
 
         &:focus {
-            background: #f5f6fa;;
+            background: #f5f6fa;
+            ;
         }
     }
 
@@ -235,6 +242,10 @@
 }
 
 .edit-account {
+    @media (max-width: 768px) {
+        padding: 0 0.5rem;
+    }
+
     input {
         padding: 0.5rem 1rem;
         border-radius: 0.75rem;
