--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -19,6 +19,11 @@ body {
     background: #F5F6FA;;
 }
 
+main {
+    z-index: 1;
+    position: relative;
+}
+
 /* responsive adaptivity */
 
 @media only screen and (min-width: 768px) {
