--- a/assets/scss/_modals.scss
+++ b/assets/scss/_modals.scss
@@ -11,6 +11,7 @@
 
         @media (max-width: 768px) {
             overflow-y: auto;
+            background: #F5F6FA !important;
         }
     }
 
