--- a/assets/scss/_account.scss
+++ b/assets/scss/_account.scss
@@ -8,6 +8,26 @@
         text-align: center;
     }
 
+    .account-promo {
+        text-align: center;
+        padding: 1.5rem;
+        box-shadow: 0px 0px 21px $aqua;
+        margin: 1rem 0.5rem 2rem;
+        border-radius: 0.75rem;
+
+        p {
+            margin-top: 0.5rem !important;
+            font-size: 1.1rem;
+            width: 50%;
+            margin: auto;
+
+            @media (max-width: 768px) {
+                width: 80%;
+            }
+        }
+    }
+
+
     &-MyAccount-content {
         display: flex;
         flex-direction: column;
@@ -45,13 +65,6 @@
                 padding: 0 2rem;
 
                 @media (max-width: 768px) {
-                    /*padding: 0 2.5rem 0 0;
-                    text-align: center;
-
-                    &:last-child {
-                        padding: 0;
-                    }*/ 
-
                     &:not(.is-active) {
                         display: none;
                     }
@@ -65,74 +78,6 @@
         }
     }
 }
-
-/*.woocommerce-form-login,
-.woocommerce-form-register {
-    width: auto;
-    margin: 0 auto !important;
-    border-color: $aqua !important;
-
-    input:not(#rememberme) {
-        padding: 0.5rem 1rem;
-        border-radius: 0.75rem;
-        border: 1px solid $aqua;
-        background: #fff;
-        width: 100%;
-        box-sizing: border-box;
-        transition: all 0.1s ease-in-out;
-
-        &:focus {
-            background: #ededed;
-        }
-    }
-
-    .form-row:not(.form-row-wide) {
-        display: flex;
-        flex-direction: row-reverse;
-        margin-top: 1.25rem;
-        justify-content: flex-end;
-        margin-bottom: 1rem;
-    }
-
-    .form-row-wide {
-        margin-bottom: 0.25rem;
-    }
-
-    label {
-        padding: 0 1rem;
-        margin-bottom: 0.75rem;
-        font-size: 1.1rem;
-        font-weight: 400;
-        line-height: 1.25rem !important;
-    }
-
-    button[type="submit"] {
-        background: $aqua;
-        color: #fff;
-        font-weight: 500;
-        border-radius: 0.75rem;
-        display: block;
-        padding: 0.75rem 3rem;
-    }
-
-    .woocommerce-form-login__rememberme {
-        margin-bottom: 0;
-        display: flex !important;
-        align-items: center;
-
-        span {
-            margin-left: 0.5rem;
-        }
-    }
-
-    .lost_password {
-        a {
-            color: #000;
-            font-style: italic;
-            font-size: 0.75rem;
-        }
-    }
-}*/
 
 .form-block {
     @media (max-width: 768px) {
