--- a/assets/scss/_social.scss
+++ b/assets/scss/_social.scss
@@ -14,6 +14,7 @@
         cursor: pointer;
         transition: all 0.2s ease-in-out;
         opacity: 1;
+        z-index: 5;
 
         &_hidden {
             bottom: -10rem;
