--- a/style.css
+++ b/style.css
@@ -1690,6 +1690,7 @@ nav {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   opacity: 1;
+  z-index: 5;
 }
 
 .social-fixed_hidden {
