--- a/style.css
+++ b/style.css
@@ -1419,7 +1419,6 @@ nav {
 }
 
 .woocommerce .account-promo {
-  text-align: center;
   padding: 1.5rem;
   -webkit-box-shadow: 0px 0px 21px #00C3CC;
           box-shadow: 0px 0px 21px #00C3CC;
@@ -1428,16 +1427,8 @@ nav {
 }
 
 .woocommerce .account-promo p {
-  margin-top: 0.5rem !important;
+  margin-top: 1rem;
   font-size: 1.1rem;
-  width: 50%;
-  margin: auto;
-}
-
-@media (max-width: 768px) {
-  .woocommerce .account-promo p {
-    width: 80%;
-  }
 }
 
 .woocommerce-MyAccount-content {
