--- a/assets/scss/_pages.scss
+++ b/assets/scss/_pages.scss
@@ -4,3 +4,11 @@
 @import "_account.scss";
 @import "_social.scss";
 @import "_modals.scss";
+
+@import "_main/_intro.scss";
+@import "_main/_advantages.scss";
+@import "_main/_how-order.scss";
+@import "_main/_road.scss";
+@import "_main/_faq.scss";
+@import "_main/_about-us.scss";
+@import "_main/_price.scss";
