--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,11 +1,11 @@
 $font-size-base: 1rem;
 
-$h1-font-size: $font-size-base * 2.625 !default;
-$h2-font-size: $font-size-base * 2 !default;
-$h3-font-size: $font-size-base * 1.625 !default;
+$h1-font-size: $font-size-base * 3.75 !default;
+$h2-font-size: $font-size-base * 2.25 !default;
+$h3-font-size: $font-size-base * 1.5 !default;
 $h4-font-size: $font-size-base * 1.25 !default;
 $h5-font-size: $font-size-base * 1.1 !default;
 $h6-font-size: $font-size-base * 1 !default;
 
-$aqua: #00C3CC;
+$aqua: #00c3cc;
 $grey: #282828;
